﻿1.5.5
- The achievements "We're Meant to Be Together" and "Base Builder" should now only trigger when
  two actual docking ports are docked together.

1.5.4, 2014-01-06
- Fixed a bug that prevented the achievement "Sunburn" from getting earned correctly.
- Clicking into the achievements list window will no longer click through in the editor.
- Updated for Toolbar Plugin 1.4.1 (included.)

1.5.3, 2013-12-17
- Updated for Toolbar Plugin 1.2.0 (included) and KSP 0.23.0.

1.5.2, 2013-12-11
- Changed achievements button to use the Toolbar Plugin (included in download.)

1.5.1, 2013-12-02
- Added 4 new achievements (now 132 total.)

1.5.0, 2013-11-16
- Earned achievements are now saved on a per-save basis instead of globally. Conversion will
  take place automatically when you open a save file.

1.4.7, 2013-11-16
- Fixed a bug that could prevent loading the Achievements Plugin correctly when trying to find
  contributed achievements in other mods.

1.4.6, 2013-11-10
- Opened up the API so that other mods may contribute new achievements.
- Added 1 new achievement (now 128 total.)

1.4.5, 2013-11-09
- You can now click on achievements in the list to see when they were earned, and with which vessel.
- The plugin's UI does now properly hide if the player wants to hide all UI (via F2 key.)
- Added 1 new achievement (now 127 total.)

1.4.4, 2013-11-06
- Added 32 new achievements (now 126 total.) Almost all of those new achievements are related to
  Kragrathea's Planet Factory mod.

1.4.3, 2013-10-26
- The achievement "We're Meant to Be Together" now requires that the craft be in a stable orbit.
- The achievement "Deep Down the Hole" has been renamed to "Deep Impact".
- Added 4 new achievements (now 94 total.)

1.4.2, 2013-10-23
- All landing achievements now require that lateral speed be lower than 1.0 m/s. This is to prevent
  only touching the surface with an airplane, then pulling up again, for example.
- Added 6 new achievements (now 90 total.)

1.4.1, 2013-10-22