@@ -1,6 +1,8 @@
 ﻿1.5.5
 - The achievements "We're Meant to Be Together" and "Base Builder" should now only trigger when
   two actual docking ports are docked together.
+- Fixed a bug that caused several EVA achievements to trigger when a Kerbal was seated in a
+  command seat.
 
 1.5.4, 2014-01-06
 - Fixed a bug that prevented the achievement "Sunburn" from getting earned correctly.
